Updates make test to include static analysis, and related changes
