# storage/api-docs/api-docs.json
@@ -5,7 +5,6 @@
         "version": "0.0.1"
     },
     "paths": {
-        "/api": {},
         "/api/v1/auth/signin": {
             "post": {
                 "tags": [
@@ -279,6 +278,75 @@
                     }
                 }
             },
+            "put": {
+                "tags": [
+                    "Contact"
+                ],
+                "summary": "Update a contact record",
+                "operationId": "10131b94e52e75253759ea58f33aa394",
+                "requestBody": {
+                    "request": "ContactUpdateRequest",
+                    "description": "Contact data to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "shipper_id": {
+                                        "type": "integer",
+                                        "example": 22
+                                    },
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Maximillian Bills"
+                                    },
+                                    "contact_number": {
+                                        "type": "string",
+                                        "example": "+1 (770) 854-3563"
+                                    },
+                                    "contact_type": {
+                                        "type": "enum",
+                                        "enum": [
+                                            "primary",
+                                            "site",
+                                            "shipping",
+                                            "billing",
+                                            "admin"
+                                        ]
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    },
+                    "422": {
+                        "description": "Request has validation errors"
+                    },
+                    "429": {
+                        "description": "Too many requests"
+                    }
+                },
+                "security": {
+                    "sanctum": {}
+                }
+            },
             "delete": {
                 "tags": [
                     "Contact"
@@ -497,6 +565,61 @@
                     "429": {
                         "description": "Too many requests"
                     }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Shipper"
+                ],
+                "summary": "Update a shipper record",
+                "operationId": "723ad850a6ecf8b4e5c4b56153e0b5c5",
+                "requestBody": {
+                    "request": "ShipperUpdateRequest",
+                    "description": "Shipper data to be updated",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string",
+                                        "example": "Bills Inc"
+                                    },
+                                    "address": {
+                                        "type": "string",
+                                        "example": "47 Upperthong Ln\\nHolmfirth\\nHD9 3UZ"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    },
+                    "422": {
+                        "description": "Request has validation errors"
+                    },
+                    "429": {
+                        "description": "Too many requests"
+                    }
+                },
+                "security": {
+                    "sanctum": {}
                 }
             },
             "delete": {
